--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.compose.material3:material3:1.1.0"
+    implementation "androidx.compose.material:material:1.4.3"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
