--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -58,9 +59,19 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.core:core-ktx:1.10.1'
+    implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation("com.google.firebase:firebase-auth-ktx")
+    implementation "org.jetbrains.kotlin:kotlin-serialization:1.7.20"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.compose.material3:material3:1.1.0"
     implementation "androidx.compose.material:material:1.4.3"
+    implementation 'com.github.SmartToolFactory:Compose-Screenshot:1.0.3'
+    implementation "com.github.skydoves:colorpicker-compose:1.0.2"
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
